--- a/004-Functions-And-More/Functions And More - Workshop.ipynb
+++ b/004-Functions-And-More/Functions And More - Workshop.ipynb
@@ -201,11 +201,69 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "oMr0Q4IfHHXi",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2. Humanize time\n",
+        "\n",
+        "Write a function `humanize_duration` that takes a number of seconds and outputs a human-readable time duration.\n",
+        "\n",
+        "Example:\n",
+        "\n",
+        "```python\n",
+        "humanize_duration(60)\n",
+        "'1 minute'\n",
+        "\n",
+        "humanize_duration(62 * 60 + 21)\n",
+        "'1 hour, 2 minutes and 21 seconds'\n",
+        "\n",
+        "humanize_duration(0.21)\n",
+        "'0.21 seconds'\n",
+        "```\n",
+        "\n",
+        "Your function should check for edge cases and raise a `ValueError` for values it can't handle.\n",
+        "\n",
+        "> **Note:** The largest subdivison of time should be \"days\" (as the next subdivision, \"month\", is not a fixed amount of time). The smallest should be \"seconds\"."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kDKweua8HG1G",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GhVRSUwCIFZB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(humanize_duration(60))\n",
+        "print(humanize_duration(62 * 60 + 21))\n",
+        "print(humanze_duration(24 * 60 * 60))\n",
+        "print(humanize_duration('3600'))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "_K8vk1pKMEft",
         "colab_type": "text"
       },
       "source": [
-        "## 2. Functional Programming - Reduce\n",
+        "## 3. Functional Programming - Reduce\n",
         "\n",
         "Write a function `reduce` that takes:\n",
         "\n",
@@ -247,7 +305,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 3. Functional Programming - Group by\n",
+        "## 4. Functional Programming - Group by\n",
         "\n",
         "Write a function `group_by` that takes:\n",
         "\n",
