--- a/004-Functions-And-More/Functions And More - Workshop.ipynb
+++ b/004-Functions-And-More/Functions And More - Workshop.ipynb
@@ -259,11 +259,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "sYyT4WbFI8ZB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3. `any`/`all`\n",
+        "\n",
+        "Rewrite the `any`/`all` functions. Reminder of their specification:\n",
+        "\n",
+        "> `any(iterable)`\n",
+        ">\n",
+        "> Return `True` if any element of the `iterable` is true.\n",
+        "\n",
+        "> `all(iterable)`\n",
+        ">\n",
+        "> Return `True` if all elements of the `iterable` are true (or if the `iterable` is empty)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4OqhvRPHJhED",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "_K8vk1pKMEft",
         "colab_type": "text"
       },
       "source": [
-        "## 3. Functional Programming - Reduce\n",
+        "## 4.1 Functional Programming - Reduce\n",
         "\n",
         "Write a function `reduce` that takes:\n",
         "\n",
@@ -305,7 +338,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 4. Functional Programming - Group by\n",
+        "## 4.2 Functional Programming - Group by (optional)\n",
         "\n",
         "Write a function `group_by` that takes:\n",
         "\n",
