--- a/004-Functions-And-More/Functions And More - Workshop.ipynb
+++ b/004-Functions-And-More/Functions And More - Workshop.ipynb
@@ -201,11 +201,59 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "sYyT4WbFI8ZB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 2. `any`/`all`\n",
+        "\n",
+        "Rewrite the `any`/`all` functions. Reminder of their specification:\n",
+        "\n",
+        "> `any(iterable)`\n",
+        ">\n",
+        "> Return `True` if any element of the `iterable` is true, `False` otherwise.\n",
+        "\n",
+        "> `all(iterable)`\n",
+        ">\n",
+        "> Return `True` if all elements of the `iterable` are true (or if the `iterable` is empty), `False` otherwise."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jfaeZOazO-k4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def any(iterable):\n",
+        "  # Your code starts here"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "36QFePqdKyVP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def all(iterable):\n",
+        "  # Your code starts here"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oMr0Q4IfHHXi",
         "colab_type": "text"
       },
       "source": [
-        "## 2. Humanize time\n",
+        "## 3. Humanize time\n",
         "\n",
         "Write a function `humanize_duration` that takes a number of seconds and outputs a human-readable time duration.\n",
         "\n",
@@ -235,7 +283,8 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def humanize_duration(duration):\n",
+        "  # Your code starts here..."
       ],
       "execution_count": 0,
       "outputs": []
@@ -250,41 +299,8 @@
       "source": [
         "print(humanize_duration(60))\n",
         "print(humanize_duration(62 * 60 + 21))\n",
-        "print(humanze_duration(24 * 60 * 60))\n",
+        "print(humanize_duration(24 * 60 * 60))\n",
         "print(humanize_duration('3600'))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "sYyT4WbFI8ZB",
-        "colab_type": "text"
-      },
-      "source": [
-        "## 3. `any`/`all`\n",
-        "\n",
-        "Rewrite the `any`/`all` functions. Reminder of their specification:\n",
-        "\n",
-        "> `any(iterable)`\n",
-        ">\n",
-        "> Return `True` if any element of the `iterable` is true.\n",
-        "\n",
-        "> `all(iterable)`\n",
-        ">\n",
-        "> Return `True` if all elements of the `iterable` are true (or if the `iterable` is empty)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4OqhvRPHJhED",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -317,19 +333,6 @@
         "\n",
         "> **Note:** `reduce`-ing is a very common problem in data science. For lists of data, we want to extract a single value (average, standard deviation, mean-squared error, etc.). Functional programming helps to give a simple way to express this calculation. As seen above, `sum` is actually a special case of reducing, using addition as the cumulative function."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jfaeZOazO-k4",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
