--- a/004-Functions-And-More/Functions And More - Chap 01 - Demo.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 01 - Demo.ipynb
@@ -9,7 +9,7 @@
       "collapsed_sections": [
         "aSdEiF-qktuN"
       ],
-      "authorship_tag": "ABX9TyMbMG106jMibS/ZbVFwzFsL",
+      "authorship_tag": "ABX9TyMQzQ4J7/Iv4vj/QEtpSLy9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,9 +154,9 @@
         "colab": {}
       },
       "source": [
-        "presidents = [{'firstname': 'George H. W.', 'lastname': 'Bush'},\n",
+        "presidents = [{'firstname': 'George W.', 'lastname': 'Bush'},\n",
         "              {'firstname': 'Thomas', 'lastname': 'Jefferson'},\n",
-        "              {'firstname': 'George W.', 'lastname': 'Bush'},\n",
+        "              {'firstname': 'George H. W.', 'lastname': 'Bush'},\n",
         "              {'firstname': 'George', 'lastname': 'Washington'},\n",
         "              {'firstname': 'Theodore', 'lastname': 'Roosevelt'},\n",
         "              {'firstname': 'Barack', 'lastname': 'Obama'},\n",
