fix opening file

--- a/004-Functions-And-More/Functions And More - Chap 03 - Exercises.ipynb
+++ b/004-Functions-And-More/Functions And More - Chap 03 - Exercises.ipynb
@@ -56,9 +56,11 @@
         "import requests\n",
         "\n",
         "res = requests.get('https://chrales.dev/python-3-beginner/tesla-stock-price.csv')\n",
-        "with open('tesla-stock-price.csv', mode='rb+') as f:\n",
+        "with open('tesla-stock-price.csv', mode='wb') as f:\n",
         "  f.write(res.content)\n",
-        "  # Display the 256 first bytes\n",
+        "\n",
+        "# Display the 256 first bytes\n",
+        "with open('tesla-stock-price.csv', mode='rb') as f:\n",
         "  f.seek(0, 0)\n",
         "  print(f'{f.read(256).decode()}...')"
       ],
