--- a/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
+++ b/005-Python-Standard-Library/Python Standard Library - Chap 02 - Demo.ipynb
@@ -6,7 +6,7 @@
       "name": "Python Standard Library - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyORyPd5PcscN7ZRIeaUZC0X",
+      "authorship_tag": "ABX9TyOPku651k7s1V9JtfW3M7dW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,24 +28,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KXMpIL5kVsJv",
+        "id": "XwTF9IJrOrj_",
         "colab_type": "text"
       },
       "source": [
-        "## Files"
+        "## Regular expressions"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "64xDsz80Q5sz",
+        "id": "9YeZwmQcOq0W",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "f = open('hello.txt')\n",
-        "print(f.read())\n",
-        "f.close()"
+        "import re"
       ],
       "execution_count": 0,
       "outputs": []
@@ -53,12 +51,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uzrZVGrwSE4Y",
+        "id": "5DTiWwcTOwFN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "open('hello.txtx')"
+        "re.search(r'a+b+', 'aaaaabbbcccc')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -66,32 +64,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_5MczQ_OVo1o",
+        "id": "3Oe0MNLgPHtY",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "with open('hello.txt') as f:\n",
-        "  print(f.read())\n",
+        "opening_crawl = \"\"\"It is a period of civil war.\n",
+        "Rebel spaceships, striking\n",
+        "from a hidden base, have won\n",
+        "their first victory against\n",
+        "the evil Galactic Empire.\n",
         "\n",
-        "print(f'File is', 'closed' if f.closed else 'open')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "a2tHo4POXOpS",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "with open('hello.txt', 'w') as f:\n",
-        "  f.write('Hello World!')\n",
+        "During the battle, Rebel\n",
+        "spies managed to steal secret\n",
+        "plans to the Empire's\n",
+        "ultimate weapon, the DEATH\n",
+        "STAR, an armored space\n",
+        "station with enough power to\n",
+        "destroy an entire planet.\n",
         "\n",
-        "with open('hello.txt') as f:\n",
-        "  print(f.read())"
+        "Pursued by the Empire's\n",
+        "sinister agents, Princess\n",
+        "Leia races home aboard her\n",
+        "starship, custodian of the\n",
+        "stolen plans that can save\n",
+        "her people and restore\n",
+        "freedom to the galaxy.....\"\"\""
       ],
       "execution_count": 0,
       "outputs": []
@@ -99,15 +97,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pi8DfWTXbWPY",
+        "id": "fB0DXQE9PBEy",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "with open('hello.txt', 'rb') as f:\n",
-        "  s = f.read()\n",
-        "\n",
-        "print(s)"
+        "re.sub(r'\\s+', ' ', opening_crawl)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -115,242 +110,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1LdDyTQWcCH9",
+        "id": "OxqKCnjxQSqu",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "with open('hello.txt') as f:\n",
-        "  print(f.read(3))\n",
-        "  print(f.read())"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "W4NNHtoAfhnA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "with open('binary.bin') as f:\n",
-        "  print(f.read())"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rPO6vL1khz18",
-        "colab_type": "text"
-      },
-      "source": [
-        "## `os`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OctjWRgkiipr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "import os\n",
-        "import os.path"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3AHw5r5DilP1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for k, v in os.environ.items():\n",
-        "  print(f'{k}={v}')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0Bd30J8dsFqO",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for f in os.listdir():\n",
-        "  print(f)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uxqnkqFV2JT7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for f in os.listdir('/'):\n",
-        "  print(f)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7dfMVqlV0P5k",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.getcwd()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WLwOYb2o0Shw",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.mkdir('toto')\n",
-        "os.chdir('toto')\n",
-        "print(os.getcwd())"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2XRbpN-Z2oUb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.listdir()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1UZ2Dmq32ZJZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "filename = 'randomdata.bin'\n",
-        "with open('randomdata.bin', 'wb') as f:\n",
-        "  f.write(os.getrandom(1 << 20))  # 1 MiB of random data"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "G043-qNk2l_K",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.listdir()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "35IQbdU92paU",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.path.exists('nonexistent.file')"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yz6_Iq2z28lv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.path.exists(filename)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vuQ_w65l2_Yk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.path.isfile(filename)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7_-gWk0K3CWW",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.path.getsize(filename)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0Gblhzzk3gMP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "fullpath = os.path.realpath(filename)\n",
-        "print(fullpath)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fMtsSKoR3nQZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "os.path.split(fullpath)"
+        "re.split('\\s+', opening_crawl)"
       ],
       "execution_count": 0,
       "outputs": []
